--- a/src/Controls/samples/Controls.Sample.Sandbox/SandboxShell.xaml
+++ b/src/Controls/samples/Controls.Sample.Sandbox/SandboxShell.xaml
@@ -1,22 +1,23 @@
 ﻿<Shell
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Maui.Controls.Sample.SandboxShell"
-    xmlns:local="clr-namespace:Maui.Controls.Sample"
-    x:Name="shell">
-    <TabBar Shell.TabBarForegroundColor="Green"
-        Shell.TabBarUnselectedColor="Red">
-        <Tab Title="MainPage1" Icon="groceries.png">
-            <ShellContent Icon="groceries.png"
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage" />
-        </Tab>
-        <Tab Title="MainPage2" Icon="dotnet_bot.png">
-            <ShellContent Icon="dotnet_bot.png"
-            Title="Home"
-            ContentTemplate="{DataTemplate local:MainPage}"
-            Route="MainPage2" />
-        </Tab>
-    </TabBar>
+	x:Class="Maui.Controls.Sample.SandboxShell"
+	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+	xmlns:local="clr-namespace:Maui.Controls.Sample"
+	x:Name="shell">
+
+	<FlyoutItem Title="MainPage1" Icon="groceries.png">
+		<ShellContent
+			Title="Home"
+			ContentTemplate="{DataTemplate local:MainPage}"
+			Icon="groceries.png"
+			Route="MainPage" />
+	</FlyoutItem>
+
+	<FlyoutItem>
+		<ShellContent
+			Title="Home"
+			ContentTemplate="{DataTemplate local:MainPage}"
+			Icon="dotnet_bot.png"
+			Route="MainPage2" />
+	</FlyoutItem>
 </Shell>
